--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi
-uvicorn
-httpx
-beautifulsoup4
-pydantic
-playwright
+fastapi>=0.128.0
+uvicorn[standard]>=0.40.0
+httpx>=0.28.1
+beautifulsoup4>=4.14.3
+pydantic>=2.12.5
+playwright>=1.57.0
+python-multipart>=0.0.21
