--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
-fastapi>=0.128.0
-uvicorn[standard]>=0.40.0
-httpx>=0.28.1
-beautifulsoup4>=4.14.3
-pydantic>=2.12.5
-playwright>=1.58.0
-python-multipart>=0.0.21
+# Core API
+fastapi==0.128.0
+uvicorn[standard]==0.40.0
+pydantic==2.12.5
+python-multipart==0.0.21
+
+# HTTP + parsing
+httpx==0.28.1
+beautifulsoup4==4.14.3
+
+# Browser automation (must match the Docker base image tag)
+playwright==1.58.0
